<resources>
    <string name="app_name">FoodTasker</string>
    <string name="use_a_different_account">USE A DIFFERENT ACCOUNT</string>
    <string name="created_by_kgotso_koete">Created by Kgotso Koete</string>
    <string name="foodtasker">FoodTasker</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="customer">Customer</string>
    <string name="driver">Driver</string>
    <string name="todo">TODO</string>
    <string name="restaurant">Restaurant</string>
    <string name="tray">Tray</string>
    <string name="order">Order</string>
    <string name="customer_order_history">Your order history</string>
    <string name="logout">Logout</string>
    <string name="kgotso_koete">Kgotso Koete</string>
    <string name="todo2">TODO2</string>
    <string name="profile_pic">profile_pic</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="restaurant_address">Restaurant Address</string>
    <string name="search_restaurant">Search restaurant</string>
    <string name="_1">1</string>
    <string name="burger_king">Burger King</string>
    <string name="_10_00">$10.00</string>
    <string name="total">Total</string>
    <string name="address">Address</string>
    <string name="on_the_way">ON THE WAY</string>
    <string name="most_popular">Most Popular</string>
    <string name="this_is_a_great_burger">This is a great burger</string>
    <string name="_12_00">$12.00</string>
    <string name="this_is_the_best_burger_that_i_have_ever_seen">This is the best burger that I have ever seen.</string>
    <string name="add_to_tray">ADD TO TRAY</string>
    <string name="MealDetailImage">meal_detail_image</string>
    <string name="plusSign">+</string>
    <string name="minusSign">-</string>
    <string name="empty_string" />
    <string name="place_order">PLACE ORDER</string>
    <string name="driver_orders">Orders</string>
    <string name="driver_delivery">Delivery</string>
    <string name="statistics">Statistics</string>
    <string name="driver_order_history">Your order history</string>
    <string name="driver_logout">Logout</string>
    <string name="restaurant_name_">Restaurant Name</string>
    <string name="customer_name_">Customer Name</string>
    <string name="customer_profile_image">Customer image</string>
    <string name="customer_address_">Customer Address</string>
    <string name="order_total_">Delivery Date</string>
    <string name="complete_order_">COMPLETE ORDER</string>
    <string name="facebook_app_id">2600629376689417</string>
    <string name="fb_login_protocol_scheme">fb2600629376689417</string>
    <string name="API_URL">https://arcane-spire-07518.herokuapp.com/api</string>


</resources>
