<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/tray_meal_quantity"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:padding="10dp"
        android:text="@string/_1"
        android:textAlignment="center"
        android:textSize="17sp"/>
    <TextView
        android:id="@+id/tray_meal_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_weight="1"
        android:padding="10dp"
        android:text="@string/burger_king"
        android:textSize="17sp"/>
    <TextView
        android:id="@+id/tray_meal_subtotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/_10_00"
        android:textSize="17sp"/>
</LinearLayout>